# trampoline

./: .gitignore  CMakeLists.txt  setup.py
example/: CMakeLists.txt
example/cli/: cli.c
example/ns/: ns.c
example/query/: query.c
example/rslv/: rslv.c
include/: head.h  ns.h  pkt.h  req.h  rslv.h  soa.h  zone.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  build.c  build.h  cli.c  cli.h  cli_res.c  cli_res.h  dns.c  dns.h  head.c  head.h  name.c  name.h  ns.c  parse.c  parse.h  pkt.c  rec.c  rec.h  req.c  req.h  res.c  res.h  rslv.c  rslv.h  rslv_req.c  rslv_req.h  soa.c  zone.c
src/details/: build.c  build.h  cli.c  cli.h  cli_res.c  cli_res.h  dns.c  dns.h  head.c  head.h  name.c  name.h  ns.c  ns.h  parse.c  parse.h  pkt.c  pkt.h  rec.c  rec.h  req.c  req.h  res.c  res.h  rslv.c  rslv.h  rslv_req.c  rslv_req.h  rslv_task.c  rslv_task.h  soa.c  soa.h  zone.c  zone.h
src/dns/: a.c  a.h  cname.c  cname.h
