project    (trampoline)
add_library(trampoline STATIC
    details/name.h
    details/name.c

    details/head.h
    details/head.c

    details/req.h
    details/req.c

    details/res.h
    details/res.c

    details/pkt.h
    details/pkt.c

    details/rslv.h
    details/rslv.c

    details/rslv_task.h
    details/rslv_task.c

    details/cli.h
    details/cli.c

    details/soa.h
    details/soa.c

    details/zone.h
    details/zone.c

    details/rec.h
    details/rec.c

    details/ns.h
    details/ns.c

    head.h
    head.c

    name.h
    name.c

    req.h
    req.c

    res.h
    res.c

    pkt.h
    pkt.c

    rslv.h
    rslv.c

    zone.h
    zone.c

    rec.h
    rec.c

    ns.h
    ns.c

    cli.h
    cli.c

    soa.h
    soa.c
)