project    (trampoline)
add_library(trampoline STATIC
    details/name.h
    details/name.c

    details/head.h
    details/head.c

    details/req.h
    details/req.c

    details/res.h
    details/res.c

    details/pkt.h
    details/pkt.c

    details/rslv.h
    details/rslv.c

    details/rslv_req.h
    details/rslv_req.c

    details/cli.h
    details/cli.c

    details/cli_res.h
    details/cli_res.c

    details/soa.h
    details/soa.c

    details/zone.h
    details/zone.c

    details/rec.h
    details/rec.c

    details/ns.h
    details/ns.c

    head.h
    head.c

    req.h
    req.c

    res.h
    res.c

    pkt.h
    pkt.c

    rslv.h
    rslv.c

    rslv_req.h
    rslv_req.c

    zone.h
    zone.c

    rec.h
    rec.c

    ns.h
    ns.c

    cli.h
    cli.c

    cli_res.h
    cli_res.c

    soa.h
    soa.c
)